cabal-version:      2.2
name:               gogol-analytics
version:            0.5.0
synopsis:           Google Analytics SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Views and manages your Google Analytics data.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v3@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-analytics

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.Analytics
    Network.Google.Analytics.Data.Ga.Get
    Network.Google.Analytics.Data.Mcf.Get
    Network.Google.Analytics.Data.Realtime.Get
    Network.Google.Analytics.Management.Accounts.List
    Network.Google.Analytics.Management.AccountSummaries.List
    Network.Google.Analytics.Management.AccountUserLinks.Delete
    Network.Google.Analytics.Management.AccountUserLinks.Insert
    Network.Google.Analytics.Management.AccountUserLinks.List
    Network.Google.Analytics.Management.AccountUserLinks.Update
    Network.Google.Analytics.Management.ClientId.HashClientId
    Network.Google.Analytics.Management.CustomDataSources.List
    Network.Google.Analytics.Management.CustomDimensions.Get
    Network.Google.Analytics.Management.CustomDimensions.Insert
    Network.Google.Analytics.Management.CustomDimensions.List
    Network.Google.Analytics.Management.CustomDimensions.Patch
    Network.Google.Analytics.Management.CustomDimensions.Update
    Network.Google.Analytics.Management.CustomMetrics.Get
    Network.Google.Analytics.Management.CustomMetrics.Insert
    Network.Google.Analytics.Management.CustomMetrics.List
    Network.Google.Analytics.Management.CustomMetrics.Patch
    Network.Google.Analytics.Management.CustomMetrics.Update
    Network.Google.Analytics.Management.Experiments.Delete
    Network.Google.Analytics.Management.Experiments.Get
    Network.Google.Analytics.Management.Experiments.Insert
    Network.Google.Analytics.Management.Experiments.List
    Network.Google.Analytics.Management.Experiments.Patch
    Network.Google.Analytics.Management.Experiments.Update
    Network.Google.Analytics.Management.Filters.Delete
    Network.Google.Analytics.Management.Filters.Get
    Network.Google.Analytics.Management.Filters.Insert
    Network.Google.Analytics.Management.Filters.List
    Network.Google.Analytics.Management.Filters.Patch
    Network.Google.Analytics.Management.Filters.Update
    Network.Google.Analytics.Management.Goals.Get
    Network.Google.Analytics.Management.Goals.Insert
    Network.Google.Analytics.Management.Goals.List
    Network.Google.Analytics.Management.Goals.Patch
    Network.Google.Analytics.Management.Goals.Update
    Network.Google.Analytics.Management.ProfileFilterLinks.Delete
    Network.Google.Analytics.Management.ProfileFilterLinks.Get
    Network.Google.Analytics.Management.ProfileFilterLinks.Insert
    Network.Google.Analytics.Management.ProfileFilterLinks.List
    Network.Google.Analytics.Management.ProfileFilterLinks.Patch
    Network.Google.Analytics.Management.ProfileFilterLinks.Update
    Network.Google.Analytics.Management.Profiles.Delete
    Network.Google.Analytics.Management.Profiles.Get
    Network.Google.Analytics.Management.Profiles.Insert
    Network.Google.Analytics.Management.Profiles.List
    Network.Google.Analytics.Management.Profiles.Patch
    Network.Google.Analytics.Management.Profiles.Update
    Network.Google.Analytics.Management.ProfileUserLinks.Delete
    Network.Google.Analytics.Management.ProfileUserLinks.Insert
    Network.Google.Analytics.Management.ProfileUserLinks.List
    Network.Google.Analytics.Management.ProfileUserLinks.Update
    Network.Google.Analytics.Management.RemarketingAudience.Delete
    Network.Google.Analytics.Management.RemarketingAudience.Get
    Network.Google.Analytics.Management.RemarketingAudience.Insert
    Network.Google.Analytics.Management.RemarketingAudience.List
    Network.Google.Analytics.Management.RemarketingAudience.Patch
    Network.Google.Analytics.Management.RemarketingAudience.Update
    Network.Google.Analytics.Management.Segments.List
    Network.Google.Analytics.Management.UnsampledReports.Delete
    Network.Google.Analytics.Management.UnsampledReports.Get
    Network.Google.Analytics.Management.UnsampledReports.Insert
    Network.Google.Analytics.Management.UnsampledReports.List
    Network.Google.Analytics.Management.Uploads.DeleteUploadData
    Network.Google.Analytics.Management.Uploads.Get
    Network.Google.Analytics.Management.Uploads.List
    Network.Google.Analytics.Management.Uploads.UploadData
    Network.Google.Analytics.Management.Webproperties.Get
    Network.Google.Analytics.Management.Webproperties.Insert
    Network.Google.Analytics.Management.Webproperties.List
    Network.Google.Analytics.Management.Webproperties.Patch
    Network.Google.Analytics.Management.Webproperties.Update
    Network.Google.Analytics.Management.WebPropertyAdWordsLinks.Delete
    Network.Google.Analytics.Management.WebPropertyAdWordsLinks.Get
    Network.Google.Analytics.Management.WebPropertyAdWordsLinks.Insert
    Network.Google.Analytics.Management.WebPropertyAdWordsLinks.List
    Network.Google.Analytics.Management.WebPropertyAdWordsLinks.Patch
    Network.Google.Analytics.Management.WebPropertyAdWordsLinks.Update
    Network.Google.Analytics.Management.WebpropertyUserLinks.Delete
    Network.Google.Analytics.Management.WebpropertyUserLinks.Insert
    Network.Google.Analytics.Management.WebpropertyUserLinks.List
    Network.Google.Analytics.Management.WebpropertyUserLinks.Update
    Network.Google.Analytics.Metadata.Columns.List
    Network.Google.Analytics.Provisioning.CreateAccountTicket
    Network.Google.Analytics.Provisioning.CreateAccountTree
    Network.Google.Analytics.Types
    Network.Google.Analytics.UserDeletion.UserDeletionRequest.Upsert

  other-modules:
    Network.Google.Analytics.Internal.Product
    Network.Google.Analytics.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
