name:                  gogol-android-enterprise
version:               0.5.0
synopsis:              Google Play EMM SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    Manages the deployment of apps to Android for Work users.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1@
    of the API.

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.AndroidEnterprise
        , Network.Google.AndroidEnterprise.Types
        , Network.Google.Resource.AndroidEnterprise.Devices.Get
        , Network.Google.Resource.AndroidEnterprise.Devices.GetState
        , Network.Google.Resource.AndroidEnterprise.Devices.List
        , Network.Google.Resource.AndroidEnterprise.Devices.Patch
        , Network.Google.Resource.AndroidEnterprise.Devices.SetState
        , Network.Google.Resource.AndroidEnterprise.Devices.Update
        , Network.Google.Resource.AndroidEnterprise.Enterprises.AcknowledgeNotificationSet
        , Network.Google.Resource.AndroidEnterprise.Enterprises.CompleteSignup
        , Network.Google.Resource.AndroidEnterprise.Enterprises.CreateWebToken
        , Network.Google.Resource.AndroidEnterprise.Enterprises.Enroll
        , Network.Google.Resource.AndroidEnterprise.Enterprises.GenerateSignupURL
        , Network.Google.Resource.AndroidEnterprise.Enterprises.Get
        , Network.Google.Resource.AndroidEnterprise.Enterprises.GetServiceAccount
        , Network.Google.Resource.AndroidEnterprise.Enterprises.GetStoreLayout
        , Network.Google.Resource.AndroidEnterprise.Enterprises.List
        , Network.Google.Resource.AndroidEnterprise.Enterprises.PullNotificationSet
        , Network.Google.Resource.AndroidEnterprise.Enterprises.SendTestPushNotification
        , Network.Google.Resource.AndroidEnterprise.Enterprises.SetAccount
        , Network.Google.Resource.AndroidEnterprise.Enterprises.SetStoreLayout
        , Network.Google.Resource.AndroidEnterprise.Enterprises.Unenroll
        , Network.Google.Resource.AndroidEnterprise.Entitlements.Delete
        , Network.Google.Resource.AndroidEnterprise.Entitlements.Get
        , Network.Google.Resource.AndroidEnterprise.Entitlements.List
        , Network.Google.Resource.AndroidEnterprise.Entitlements.Patch
        , Network.Google.Resource.AndroidEnterprise.Entitlements.Update
        , Network.Google.Resource.AndroidEnterprise.GrouplicenseUsers.List
        , Network.Google.Resource.AndroidEnterprise.Grouplicenses.Get
        , Network.Google.Resource.AndroidEnterprise.Grouplicenses.List
        , Network.Google.Resource.AndroidEnterprise.Installs.Delete
        , Network.Google.Resource.AndroidEnterprise.Installs.Get
        , Network.Google.Resource.AndroidEnterprise.Installs.List
        , Network.Google.Resource.AndroidEnterprise.Installs.Patch
        , Network.Google.Resource.AndroidEnterprise.Installs.Update
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforDevice.Delete
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforDevice.Get
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforDevice.List
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforDevice.Patch
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforDevice.Update
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforUser.Delete
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforUser.Get
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforUser.List
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforUser.Patch
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationsforUser.Update
        , Network.Google.Resource.AndroidEnterprise.ManagedConfigurationssettings.List
        , Network.Google.Resource.AndroidEnterprise.Permissions.Get
        , Network.Google.Resource.AndroidEnterprise.Products.Approve
        , Network.Google.Resource.AndroidEnterprise.Products.GenerateApprovalURL
        , Network.Google.Resource.AndroidEnterprise.Products.Get
        , Network.Google.Resource.AndroidEnterprise.Products.GetAppRestrictionsSchema
        , Network.Google.Resource.AndroidEnterprise.Products.GetPermissions
        , Network.Google.Resource.AndroidEnterprise.Products.List
        , Network.Google.Resource.AndroidEnterprise.Products.UnApprove
        , Network.Google.Resource.AndroidEnterprise.ServiceAccountkeys.Delete
        , Network.Google.Resource.AndroidEnterprise.ServiceAccountkeys.Insert
        , Network.Google.Resource.AndroidEnterprise.ServiceAccountkeys.List
        , Network.Google.Resource.AndroidEnterprise.Storelayoutclusters.Delete
        , Network.Google.Resource.AndroidEnterprise.Storelayoutclusters.Get
        , Network.Google.Resource.AndroidEnterprise.Storelayoutclusters.Insert
        , Network.Google.Resource.AndroidEnterprise.Storelayoutclusters.List
        , Network.Google.Resource.AndroidEnterprise.Storelayoutclusters.Patch
        , Network.Google.Resource.AndroidEnterprise.Storelayoutclusters.Update
        , Network.Google.Resource.AndroidEnterprise.Storelayoutpages.Delete
        , Network.Google.Resource.AndroidEnterprise.Storelayoutpages.Get
        , Network.Google.Resource.AndroidEnterprise.Storelayoutpages.Insert
        , Network.Google.Resource.AndroidEnterprise.Storelayoutpages.List
        , Network.Google.Resource.AndroidEnterprise.Storelayoutpages.Patch
        , Network.Google.Resource.AndroidEnterprise.Storelayoutpages.Update
        , Network.Google.Resource.AndroidEnterprise.Users.Delete
        , Network.Google.Resource.AndroidEnterprise.Users.GenerateAuthenticationToken
        , Network.Google.Resource.AndroidEnterprise.Users.GenerateToken
        , Network.Google.Resource.AndroidEnterprise.Users.Get
        , Network.Google.Resource.AndroidEnterprise.Users.GetAvailableProductSet
        , Network.Google.Resource.AndroidEnterprise.Users.Insert
        , Network.Google.Resource.AndroidEnterprise.Users.List
        , Network.Google.Resource.AndroidEnterprise.Users.Patch
        , Network.Google.Resource.AndroidEnterprise.Users.RevokeDeviceAccess
        , Network.Google.Resource.AndroidEnterprise.Users.RevokeToken
        , Network.Google.Resource.AndroidEnterprise.Users.SetAvailableProductSet
        , Network.Google.Resource.AndroidEnterprise.Users.Update
        , Network.Google.Resource.AndroidEnterprise.WebApps.Delete
        , Network.Google.Resource.AndroidEnterprise.WebApps.Get
        , Network.Google.Resource.AndroidEnterprise.WebApps.Insert
        , Network.Google.Resource.AndroidEnterprise.WebApps.List
        , Network.Google.Resource.AndroidEnterprise.WebApps.Patch
        , Network.Google.Resource.AndroidEnterprise.WebApps.Update

    other-modules:
          Network.Google.AndroidEnterprise.Types.Product
        , Network.Google.AndroidEnterprise.Types.Sum

    build-depends:
          gogol-core == 0.5.0.*
        , base       >= 4.7 && < 5
