cabal-version:      2.2
name:               gogol-android-publisher
version:            0.5.0
synopsis:           Google Play Android Developer SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  Lets Android application developers access their Google Play accounts.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v3@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-android-publisher

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AndroidPublisher
    Network.Google.AndroidPublisher.Edits.Apks.Addexternallyhosted
    Network.Google.AndroidPublisher.Edits.Apks.List
    Network.Google.AndroidPublisher.Edits.Apks.Upload
    Network.Google.AndroidPublisher.Edits.Bundles.List
    Network.Google.AndroidPublisher.Edits.Bundles.Upload
    Network.Google.AndroidPublisher.Edits.Commit
    Network.Google.AndroidPublisher.Edits.Countryavailability.Get
    Network.Google.AndroidPublisher.Edits.Delete
    Network.Google.AndroidPublisher.Edits.Deobfuscationfiles.Upload
    Network.Google.AndroidPublisher.Edits.Details.Get
    Network.Google.AndroidPublisher.Edits.Details.Patch
    Network.Google.AndroidPublisher.Edits.Details.Update
    Network.Google.AndroidPublisher.Edits.Expansionfiles.Get
    Network.Google.AndroidPublisher.Edits.Expansionfiles.Patch
    Network.Google.AndroidPublisher.Edits.Expansionfiles.Update
    Network.Google.AndroidPublisher.Edits.Expansionfiles.Upload
    Network.Google.AndroidPublisher.Edits.Get
    Network.Google.AndroidPublisher.Edits.Images.Delete
    Network.Google.AndroidPublisher.Edits.Images.Deleteall
    Network.Google.AndroidPublisher.Edits.Images.List
    Network.Google.AndroidPublisher.Edits.Images.Upload
    Network.Google.AndroidPublisher.Edits.Insert
    Network.Google.AndroidPublisher.Edits.Listings.Delete
    Network.Google.AndroidPublisher.Edits.Listings.Deleteall
    Network.Google.AndroidPublisher.Edits.Listings.Get
    Network.Google.AndroidPublisher.Edits.Listings.List
    Network.Google.AndroidPublisher.Edits.Listings.Patch
    Network.Google.AndroidPublisher.Edits.Listings.Update
    Network.Google.AndroidPublisher.Edits.Testers.Get
    Network.Google.AndroidPublisher.Edits.Testers.Patch
    Network.Google.AndroidPublisher.Edits.Testers.Update
    Network.Google.AndroidPublisher.Edits.Tracks.Get
    Network.Google.AndroidPublisher.Edits.Tracks.List
    Network.Google.AndroidPublisher.Edits.Tracks.Patch
    Network.Google.AndroidPublisher.Edits.Tracks.Update
    Network.Google.AndroidPublisher.Edits.Validate
    Network.Google.AndroidPublisher.Generatedapks.Download
    Network.Google.AndroidPublisher.Generatedapks.List
    Network.Google.AndroidPublisher.Grants.Create
    Network.Google.AndroidPublisher.Grants.Delete
    Network.Google.AndroidPublisher.Grants.Patch
    Network.Google.AndroidPublisher.Inappproducts.Delete
    Network.Google.AndroidPublisher.Inappproducts.Get
    Network.Google.AndroidPublisher.Inappproducts.Insert
    Network.Google.AndroidPublisher.Inappproducts.List
    Network.Google.AndroidPublisher.Inappproducts.Patch
    Network.Google.AndroidPublisher.Inappproducts.Update
    Network.Google.AndroidPublisher.Internalappsharingartifacts.Uploadapk
    Network.Google.AndroidPublisher.Internalappsharingartifacts.Uploadbundle
    Network.Google.AndroidPublisher.Monetization.ConvertRegionPrices
    Network.Google.AndroidPublisher.Orders.Refund
    Network.Google.AndroidPublisher.Purchases.Products.Acknowledge
    Network.Google.AndroidPublisher.Purchases.Products.Get
    Network.Google.AndroidPublisher.Purchases.Subscriptions.Acknowledge
    Network.Google.AndroidPublisher.Purchases.Subscriptions.Cancel
    Network.Google.AndroidPublisher.Purchases.Subscriptions.Defer
    Network.Google.AndroidPublisher.Purchases.Subscriptions.Get
    Network.Google.AndroidPublisher.Purchases.Subscriptions.Refund
    Network.Google.AndroidPublisher.Purchases.Subscriptions.Revoke
    Network.Google.AndroidPublisher.Purchases.Voidedpurchases.List
    Network.Google.AndroidPublisher.Reviews.Get
    Network.Google.AndroidPublisher.Reviews.List
    Network.Google.AndroidPublisher.Reviews.Reply
    Network.Google.AndroidPublisher.Systemapks.Variants.Create
    Network.Google.AndroidPublisher.Systemapks.Variants.Download
    Network.Google.AndroidPublisher.Systemapks.Variants.Get
    Network.Google.AndroidPublisher.Systemapks.Variants.List
    Network.Google.AndroidPublisher.Types
    Network.Google.AndroidPublisher.Users.Create
    Network.Google.AndroidPublisher.Users.Delete
    Network.Google.AndroidPublisher.Users.List
    Network.Google.AndroidPublisher.Users.Patch

  other-modules:
    Network.Google.AndroidPublisher.Internal.Product
    Network.Google.AndroidPublisher.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
